RESOLVED FIXED69299
On X86, switch bucketCount into a register, timeoutCheck into memory
https://bugs.webkit.org/show_bug.cgi?id=69299
Summary On X86, switch bucketCount into a register, timeoutCheck into memory
Gavin Barraclough
Reported 2011-10-03 15:21:46 PDT
We don't have sufficient registers to keep both in registers, and DFG JIT will trample esi; it doesn't matter if the bucketCount gets stomped on (in fact it may add to randomness!), but it if the timeoutCheck gets trashed we may make calls out to the timout_check stub function too frequently (regressing performance). This patch has no perf impact on sunspider.
Attachments
Fix (10.06 KB, patch)
2011-10-03 15:45 PDT, Gavin Barraclough
ggaren: review+
Gavin Barraclough
Comment 1 2011-10-03 15:45:57 PDT
Geoffrey Garen
Comment 2 2011-10-03 18:09:24 PDT
Comment on attachment 109543 [details] Fix r=me
Gavin Barraclough
Comment 3 2011-10-03 18:16:37 PDT
Fixed in r96563
Note You need to log in before you can comment on or make changes to this bug.