Source/JavaScriptCore/jit/JITInlineMethods.h
@@ -446,10 +446,6 @@ inline void JIT::emitAllocateJSFunction(FunctionExecutable* executable, Register
 #endif
 }
 
-#if CPU(X86) && ENABLE(VALUE_PROFILER)
-extern int bucketCounter;
-#endif
-
 #if ENABLE(VALUE_PROFILER)
 inline void JIT::emitValueProfilingSite(ValueProfilingSiteKind siteKind)
 {
@@ -469,17 +465,6 @@ inline void JIT::emitValueProfilingSite(ValueProfilingSiteKind siteKind)
     
     ASSERT(valueProfile);
     
-#if CPU(X86)
-    if (m_randomGenerator.getUint32() & 1)
-        add32(Imm32(1), AbsoluteAddress(&bucketCounter));
-    else
-        add32(Imm32(3), AbsoluteAddress(&bucketCounter));
-    and32(Imm32(ValueProfile::bucketIndexMask), AbsoluteAddress(&bucketCounter));
-    load32(&bucketCounter, scratch);
-    lshift32(TrustedImm32(3), scratch);
-    addPtr(ImmPtr(valueProfile->m_buckets), scratch);
-    storePtr(value, scratch);
-#else
     if (m_randomGenerator.getUint32() & 1)
         add32(Imm32(1), bucketCounterRegister);
     else
@@ -487,7 +472,6 @@ inline void JIT::emitValueProfilingSite(ValueProfilingSiteKind siteKind)
     and32(Imm32(ValueProfile::bucketIndexMask), bucketCounterRegister);
     move(ImmPtr(valueProfile->m_buckets), scratch);
     storePtr(value, BaseIndex(scratch, bucketCounterRegister, TimesEight));
-#endif
 }
 #endif
 
